# minimasim

./: .gitignore  .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  generate_planetary_data.py
include/glm/: fwd.hpp
include/glm/detail/: _noise.hpp  func_common.hpp  func_common.inl  func_common_simd.inl  func_exponential.hpp  func_exponential.inl  func_geometric.inl  func_integer.hpp  func_integer.inl  func_matrix.hpp  func_matrix.inl  func_matrix_simd.inl  func_packing.inl  func_trigonometric.hpp  func_trigonometric.inl  type_float.hpp  type_int.hpp  type_mat2x2.hpp  type_mat2x3.hpp  type_mat2x4.hpp  type_mat3x2.hpp  type_mat3x3.hpp  type_mat3x4.hpp  type_mat4x2.hpp  type_mat4x3.hpp  type_mat4x4.hpp  type_vec1.hpp  type_vec2.hpp  type_vec3.hpp  type_vec4.hpp  type_vec4.inl
include/glm/gtc/: bitfield.hpp  color_space.hpp  epsilon.hpp  (+16 more)
include/imgui/: imgui.h
src/: main.cpp
src/app/: engine_app.cpp  engine_app.h
src/engine/: engine.cpp  engine.h  engine_gui.cpp  engine_gui.h  entity_registry.h  precompiled_entities.cpp  precompiled_entities.h  precompiled_shaders.cpp  precompiled_shaders.h  render_settings.h
src/gfx/: bo.cpp  bo.h  camera.cpp  camera.h  gfx.h  light.cpp  light.h  line_strip_utils.cpp  line_strip_utils.h  material.cpp  material.h  shader.cpp  shader.h  texture.cpp  texture.h  vao.cpp  vao.h  window.cpp  window.h
src/imgui/: animation_curve.cpp  animation_curve.h  imgui_helper.cpp
src/input/: handle_input.cpp  handle_input.h
src/math/: bezier.cpp  bezier.h  math_tools.h  n_body_sim.cpp  n_body_sim.h  perlin.cpp  perlin_noise_map.cpp  perlin_noise_map.h
src/mesh/: axis_entity.cpp  axis_entity.h  cube_entity.cpp  cube_entity.h  perlin_plane.cpp  perlin_plane.h  perlin_plane_entity.cpp  perlin_plane_entity.h  sphere_entity.cpp  sphere_entity.h  sphere_entity_constants.h
src/scenes/: scene_gravity.cpp  scene_gravity.h  scene_test.cpp  scene_test.h
src/shaders/: color.vert  geometry_triangle.frag  geometry_triangle.geom  plain_fragment.frag  texture.frag  texture.vert  textured_terrain.frag  textured_terrain.vert
(+31 files in other folders)
